[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Sounds/Menu Click.mp3" type="AudioStream" id=1]
[ext_resource path="res://Assets/Music/Take 2 (The good one).mp3" type="AudioStream" id=2]
[ext_resource path="res://Global/GlobalSound.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/Actual End Level.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/Death.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Music/Full Theme.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Music/Ending Theme.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Sounds/Hurt.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Sounds/Vulture.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/Sounds/Snake Hiss.mp3" type="AudioStream" id=10]

[node name="GlobalSound" type="Node2D"]
script = ExtResource( 3 )

[node name="MenuClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="MenuSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Death" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Jump" type="AudioStreamPlayer" parent="."]

[node name="EndLevel" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="EndGame" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="MainSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Vulture" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -6.0

[node name="Snake" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
